# dygma_dvt_led_fix

./: pyproject.toml
dygma_dvt_led_fix/: auxillary_types.py  constants.py  main.py
dygma_dvt_led_fix/dygma/: descriptors.py  keyboard.py  utils.py
