[tool.poetry]
name = "dygma-dvt-led-fix"
version = "0.1.0"
description = ""
authors = ["Massimiliano della Rovere <massimiliano.dellarovere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
